# facemaker-fm2

./: .gitignore  README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt  webui.py
scripts/: face_analyser.py  face_enhancer.py  face_masker.py  face_store.py  face_swapper.py
templates/: index.html
