[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "facemaker-client"
version = "25.1"
authors = [
  { name="ikmalsaid", email="ikmalsaid@gmail.com" },
]
description = "A comprehensive toolkit for hardware-accelerated image/video face swapping."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
  "colorpaws",
  "numpy",
  "requests",
  "pillow"
]
keywords = [
  "facemaker-client",
  "facemaker_client"
]

[project.urls]
Homepage = "https://github.com/ikmalsaid/facemaker-client"
Issues = "https://github.com/ikmalsaid/facemaker-client/issues"